--- a/src/App.css
+++ b/src/App.css
@@ -54,3 +54,9 @@ nav div{
   display: flex;
   justify-content: space-around;
 }
+
+.border{
+  border: 1px solid #000;
+  padding: 20px;
+  margin: 10px 0;
+}
